--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "DefaultConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5" }
 }
