--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "SecretKey": "averylongsecretkeythatisrequiredtobeused"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5",
     "DebugConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5"
