feat: debug added

--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -13,6 +13,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5",
-    "DebugConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5"
+    "DebugConnection": "Host=localhost;Port=5432;Database=SOSALDB;Username=admin;Password=root"
   }
 }
