fix: changed connection string

--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -12,7 +12,7 @@
     "SecretKey": "averylongsecretkeythatisrequiredtobeused"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "postgressql://admin:BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5@dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com/dbbase_6py5",
+    "DefaultConnection": "Host=dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com;Port=5432;Database=ALEXYS;Username=admin;Password=BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5",
     "DebugConnection": "Host=localhost;Port=5432;Database=SOSALDB;Username=admin;Password=root"
   }
 }
