--- a/ShootingAcademy/ShootingAcademy.csproj
+++ b/ShootingAcademy/ShootingAcademy.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -40,5 +39,7 @@
 
   <ItemGroup>
     <Folder Include="Models\Controllers\Course\" />
+    <Folder Include="Models\Controllers\Course\" />
+    <Folder Include="Models\DB\ModelCourse\DTO\" />
   </ItemGroup>
 </Project>
