--- a/ShootingAcademy/ShootingAcademy.csproj
+++ b/ShootingAcademy/ShootingAcademy.csproj
@@ -15,12 +15,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\DB\ModelCourse\DTO\**" />
     <Compile Remove="Models\DB\ModelRole\DTO\**" />
     <Compile Remove="wwwroot\**" />
+    <Content Remove="Models\DB\ModelCourse\DTO\**" />
     <Content Remove="Models\DB\ModelRole\DTO\**" />
     <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="Models\DB\ModelCourse\DTO\**" />
     <EmbeddedResource Remove="Models\DB\ModelRole\DTO\**" />
     <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="Models\DB\ModelCourse\DTO\**" />
     <None Remove="Models\DB\ModelRole\DTO\**" />
     <None Remove="wwwroot\**" />
   </ItemGroup>
@@ -40,6 +44,5 @@
   <ItemGroup>
     <Folder Include="Models\Controllers\Course\" />
     <Folder Include="Models\Controllers\Course\" />
-    <Folder Include="Models\DB\ModelCourse\DTO\" />
   </ItemGroup>
 </Project>
