--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,10 @@ services:
       dockerfile: ShootingAcademy/Dockerfile
     ports:
       - "8080:8080"
-      - "8081:8081"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
-      - ConnectionStrings__DefaultConnection=Host=database;Port=5432;Database=ALEXYS;Username=admin;Password=root
+      - ConnectionStrings__DebugConnection=Host=database;Port=5432;Database=SOSALDB;Username=admin;Password=root
     depends_on:
       - database
 
