fix: connection fix

--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -12,7 +12,6 @@
     "SecretKey": "averylongsecretkeythatisrequiredtobeused"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-cutdgrdds78s738utv50-a.oregon-postgres.render.com;Port=5432;Database=ALEXYS;Username=admin;Password=BNPN7nQ7hCpi9ymqPOn7SIZb5OYCktl5",
-    "DebugConnection": "Host=localhost;Port=5432;Database=SOSALDB;Username=admin;Password=root"
+    "DefaultConnection": "Host=database;Port=5432;Database=ALEXYSDB;Username=admin;Password=root"
   }
 }
