--- a/ShootingAcademy/appsettings.json
+++ b/ShootingAcademy/appsettings.json
@@ -12,6 +12,6 @@
     "SecretKey": "averylongsecretkeythatisrequiredtobeused"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Port=5432;Database=ALEXYSDB;Username=admin;Password=root"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ALEXYSDB;Username=admin;Password=root"
   }
 }
